# AlgoVi

./: CMakeLists.txt  README.md  build.py  tasks.txt  tasts.txt
Tools/classGenerator/: classGenerator.py
Tools/debug_tools/: algovi_debug.h
Tools/executor/: algovi_debug.h  debug_cleaner.cpp
algovi/: CMakeLists.txt  main.cpp
algovi/system/: CAlgoViSystem.hpp  CCommandHandler.hpp
algovi/system/jobs/: CAppExecutor.hpp  CApplicationRunner.hpp  CChangeDirCommand.hpp  CEmptyJob.hpp  CExitCommandJob.hpp  CInternalSystemCommand.hpp  CJobBase.hpp  CJobForTest.hpp  CParserCommand.hpp  CPythonInterpreter.hpp  CTestCommand.hpp  CTesterJob.hpp  CWrongCommandJob.hpp  IJob.hpp
algovi/system/jobs/private/: CAppExecutor.cpp  CApplicationRunner.cpp  CChangeDirCommand.cpp  CEmptyJob.cpp  CExitCommandJob.cpp  CInternalSystemCommand.cpp  CJobForTest.cpp  CParserCommand.cpp  CPythonInterpreter.cpp  CTestCommand.cpp  CTesterJob.cpp  CWrongCommandJob.cpp
algovi/system/private/: CAlgoViSystem.cpp  CCommandHandler.cpp
controller/: CController.hpp  CMakeLists.txt
controller/private/: CController.cpp
controller/terminal/: CMakeLists.txt  CPlainTextTerminal.hpp  CTerminalBase.hpp  ITerminal.hpp  TerminalHelpers.hpp
controller/terminal/private/: CPlainTextTerminal.cpp  CPlainTextTerminalImpl.cpp  CPlainTextTerminalImpl.hpp  CTerminalBase.cpp  TerminalHelpers.cpp
externalLibs/: CMakeLists.txt
externalLibs/novileEditor/: CMakeLists.txt
externalLibs/novileEditor/example/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
externalLibs/novileEditor/src/: CMakeLists.txt
externalLibs/testlib/checkers/: CMakeLists.txt
framework/: CMakeLists.txt
framework/commands/: CAppExecutor.hpp  CCompiler.hpp  CMakeLists.txt  CPythonShell.hpp  CSystemCommand.hpp  CTerminalCommandBase.hpp  ITerminalCommand.hpp  ITerminalSignals.hpp  ProcessHelper.hpp  TProgLanguages.hpp
framework/commands/executor/: CAppExecutor.hpp  DebugHelper.hpp
framework/commands/executor/private/: CAppExecutor.cpp
framework/commands/parser/: CParserCommand.hpp
framework/commands/parser/parsers/: CMakeLists.txt  cf.cpp
framework/commands/parser/private/: CParserCommand.cpp
framework/commands/private/: CAppExecutor.cpp  CCompiler.cpp  CCompilerExecutor.cpp  CCompilerExecutor.hpp  CPythonShell.cpp  CSystemCommand.cpp  CTerminalCommandBase.cpp
framework/commands/testCommand/: CTestCommand.hpp  CTestProvider.hpp  CTestReader.hpp  CTestWriter.hpp  TableDrawer.hpp  TestCommandHelper.hpp
framework/commands/testCommand/private/: CTestCommand.cpp  CTestProvider.cpp  CTestReader.cpp  CTestWriter.cpp
framework/commands/tester/: CTesterCommand.hpp
framework/commands/tester/private/: CTesterCommand.cpp  CTesterImpl.cpp  CTesterImpl.hpp
framework/common/: ClassGenerators.hpp  HtmlConverter.hpp
framework/complation/: CComplationProvider.hpp  CMakeLists.txt  TCommandParserHelper.hpp
framework/complation/private/: CComplationProvider.cpp
framework/filesystem/: CMakeLists.txt  CWorkingDir.hpp  filesystem.hpp
framework/filesystem/private/: CWorkingDir.cpp  filesystem.cpp
framework/graphics/: CMakeLists.txt
framework/settings/: CCommandSettings.hpp  CMakeLists.txt  CRunnerSettings.hpp  CTerminalSettings.hpp
framework/settings/configs/: .CommandConfig.xml.swp  .RunnerConfig.xml.swp  .TerminalConfig.xml.swp  CommandConfig.xml  RunnerConfig.xml  TerminalConfig.xml
framework/settings/configs/linux/: RunnerConfig.xml  TerminalConfig.xml
framework/settings/configs/win/: CommandConfig.xml  RunnerConfig.xml  TerminalConfig.xml
framework/settings/readers/: CCommandConfigReader.hpp  CRunnerConfigReader.hpp  CSettingsReader.hpp  CTerminalConfigReader.hpp
framework/settings/readers/private/: CCommandConfigReader.cpp  CRunnerConfigReader.cpp  CSettingsReader.cpp  CTerminalConfigReader.cpp
framework/tests/: CClassToTest.cpp  CClassToTest.hpp  CMakeLists.txt  Test.hpp  test.cpp
gui/: CMainWindow.hpp  CMakeLists.txt  CTestEditor.hpp
gui/private/: CMainWindow.cpp  CTestEditor.cpp
view/: CGraphicView.hpp  CGraphicsSceneBase.hpp  CMakeLists.txt
view/private/: CGraphicView.cpp  CGraphicsSceneBase.cpp  CGraphicsSceneBase.cpp.autosave
